# SimpleColoredLogs

./: LICENSE  README.md  pyproject.toml
log/: logger.py
logger/: __init__.py  logger.py
logs/: __init__.py  category.py  logger.py  loglevel.py
